# xt-forge-agent-desktop

./: .gitignore  README.md  SETUP-mac.md  SETUP.md  api_client.py  app_settings.py  auth_store.py  bootstrap.py  main.py  main_window.py  pyproject.toml
.github/workflows/: desktop-build.yml
packaging/: build_dmg.sh  installer.iss  pyinstaller_mac.spec  pyinstaller_win.spec
panels/: _autopilot_dialog.py  _stage_base.py  _two_column.py  _visuals.py  execute.py  feature.py  jobs.py  login.py  manual_tests.py  pick_client.py  plan.py  review.py  setup.py  worklist.py
ui/: __init__.py  highlighters.py  icons.py  style.qss  xt-forge.icns
workers/: agent_run_thread.py  pipeline_autopilot.py  sse_thread.py
