[project]
name = "xtforge-desktop"
version = "0.1.0"
description = "XT-Forge Agent — cross-platform PySide6 desktop client for the XT-Forge Django pipeline"
requires-python = ">=3.10"
dependencies = [
    "PySide6>=6.6",
    "requests>=2.31",
    "httpx>=0.27",
    "keyring>=24",
    "pydantic>=2.5",
]

[project.optional-dependencies]
dev = [
    "pyinstaller>=6.5",
]

[project.scripts]
xtforge-desktop = "main:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = [
    "main",
    "main_window",
    "api_client",
    "app_settings",
    "auth_store",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["panels*", "workers*", "ui*"]
